--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -610,9 +610,6 @@
                             <li><a class="dropdown-item" href="{{ url_for('portfolio.advanced') }}">
                                 <i class="bi bi-gear-fill"></i> Avansert portfolio
                             </a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('portfolio_advanced.advanced_portfolio') }}">
-                                <i class="bi bi-cpu-fill"></i> Avansert Analytics
-                            </a></li>
                             <li><a class="dropdown-item" href="{{ url_for('advanced_analytics.index') }}">
                                 <i class="bi bi-robot"></i> ML Analytics
                             </a></li>
@@ -641,7 +638,7 @@
                                 <i class="bi bi-question-circle"></i> Guider
                             </a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="/forum/">
+                            <li><a class="dropdown-item" href="{{ url_for('forum.index') }}">
                                 <i class="bi bi-chat-dots"></i> Forum
                             </a></li>
                             <li><a class="dropdown-item" href="/blog/">
