--- a/app/templates/market_overview.html
+++ b/app/templates/market_overview.html
@@ -121,7 +121,7 @@
         
         <div class="col-lg-4 mb-4">
             <div class="card border-0 shadow h-100">
-                <div class="card-header bg-warning text-white">
+                <div class="card-header bg-warning text-dark">
                     <h5 class="mb-0"><i class="bi bi-currency-bitcoin me-2"></i>Kryptovaluta</h5>
                 </div>
                 <div class="card-body p-0">
