--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -508,7 +508,7 @@
                             <p class="lead mb-0">Bruk vår ROI-kalkulator og se hvor lønnsomt det kan være å investere smart med Aksjeradar.trade</p>
                         </div>
                         <div class="col-md-4">
-                            <a href="{{ url_for('main.roi_kalkulator') }}" class="btn btn-light btn-lg shadow">
+                            <a href="{{ url_for('main.roi_kalkulator') }}" class="btn btn-dark btn-lg shadow" style="background-color: #2c3e50; border-color: #2c3e50; color: white;">
                                 <i class="bi bi-calculator me-2"></i>Beregn ROI
                             </a>
                         </div>
