--- a/app/templates/stocks/details_enhanced.html
+++ b/app/templates/stocks/details_enhanced.html
@@ -406,7 +406,7 @@
                         </div>
                         <div class="card-body">
                             <div class="d-grid gap-2">
-                                <a href="{{ url_for('analysis.technical', symbol=ticker) }}" class="btn btn-outline-primary">
+                                <a href="{{ url_for('analysis.technical', ticker=ticker) }}" class="btn btn-outline-primary">
                                     <i class="bi bi-graph-up"></i> Full teknisk analyse
                                 </a>
                                 <a href="{{ url_for('analysis.ai', ticker=ticker) }}" class="btn btn-outline-info">
